--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-timer-hooks",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "prepublish": "npm run build",
     "build": "tsc"
